<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ringtone_maker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ringtonemaker.activity.RingtoneMakerActivity"
    tools:showIn="@layout/activity_ringtone_maker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxlarge">

            <com.example.ringtonemaker.custom.CustomTextView
                android:id="@+id/tvSelectPrefixLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefix_label"
                app:custom_font="mv_boli_v1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_large"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_medium_large"/>

            <Spinner
                android:id="@+id/spPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_xx1largest"
                android:layout_marginTop="@dimen/margin_medium_large">
            </Spinner>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_below="@+id/spPrefix"
                android:layout_marginLeft="@dimen/margin_xxx1largest"
                android:layout_marginRight="@dimen/margin_medium_small"/>

        </RelativeLayout>

        <com.example.ringtonemaker.custom.CustomTextView
            android:id="@+id/tvEnterNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            app:custom_font="mv_boli_v1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginLeft="@dimen/margin_medium_large"/>

        <com.example.ringtonemaker.custom.CustomEditText
            android:id="@+id/etEnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:hint="Type your text here"
            android:singleLine="true"
            app:custom_font="mv_boli_v1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            android:textAlignment="center"
            android:layout_marginLeft="@dimen/margin_xlargest"
            android:layout_marginRight="@dimen/margin_xlargest"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.ringtonemaker.custom.CustomTextView
                android:id="@+id/tvSelectPostfixLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postfix_label"
                app:custom_font="mv_boli_v1"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_large"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:layout_marginLeft="@dimen/margin_medium_large"/>

            <Spinner
                android:id="@+id/spPostfix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_xx2largest"
                android:layout_marginTop="@dimen/margin_medium_large">

            </Spinner>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_below="@+id/spPostfix"
                android:layout_marginLeft="@dimen/margin_xxx1largest"
                android:layout_marginRight="@dimen/margin_medium_small"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_large">

            <com.example.ringtonemaker.custom.CustomTextView
                android:id="@+id/tvLanguageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_label"
                app:custom_font="mv_boli_v1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_large"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_large"/>

            <Spinner
                android:id="@+id/spLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_xxx1largest"
                android:layout_marginTop="@dimen/margin_medium_large">

            </Spinner>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_below="@+id/spLanguage"
                android:layout_marginLeft="@dimen/margin_xxx1largest"
                android:layout_marginRight="@dimen/margin_medium_small"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <com.example.ringtonemaker.custom.CustomTextView
                android:id="@+id/tvVolumeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_label"
                app:custom_font="mv_boli_v1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_large"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_large"/>

            <com.example.ringtonemaker.custom.CustomTextView
                android:id="@+id/tvVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                app:custom_font="mv_boli_v1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium_large"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"/>

        </RelativeLayout>

        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_large"
            android:layout_marginRight="@dimen/margin_medium_large"
            android:layout_marginTop="@dimen/margin_small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large">

            <com.example.ringtonemaker.custom.CustomButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnsave"
                android:background="@drawable/button_background_maker"
                app:custom_font="mv_boli_v1"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_xxxxlarge"
                android:layout_marginTop="@dimen/margin_medium"
                android:enabled="false"/>

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play"
                android:layout_centerInParent="true"
                style="?attr/borderlessButtonStyle"
                android:paddingRight="@dimen/padding_large"
                android:layout_marginLeft="@dimen/margin_large"/>

            <com.example.ringtonemaker.custom.CustomButton
                android:id="@+id/btnSetAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_maker"
                android:text="@string/btn_set_as"
                app:custom_font="mv_boli_v1"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/margin_xxxxlarge"
                android:layout_marginTop="@dimen/margin_medium"
                android:enabled="false"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
